<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/itemScreen"
        android:gravity="center"
        android:paddingStart="8sp"
        android:paddingEnd="8sp"
        android:layout_width="match_parent"
        android:layout_height="630dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonSection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/armorPlating1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textArmorPlating1"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_armorPlate1" />

            <TextView
                android:id="@+id/defArmorPlating1"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_armorPlate1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/armorPlating2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textArmorPlating2"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_armorPlate2" />

            <TextView
                android:id="@+id/defArmorPlating2"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_armorPlate2" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/armorPlating3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textArmorPlating3"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_armorPlate3" />

            <TextView
                android:id="@+id/defArmorPlating3"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_armorPlate3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gauntlets1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textGauntlets1"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_gauntlets1" />

            <TextView
                android:id="@+id/defGauntlets1"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_gauntlets1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gauntlets2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textGauntlets2"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_gauntlets2" />

            <TextView
                android:id="@+id/defGauntlets2"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_gauntlets2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nanites1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textNanites1"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_nanites1" />

            <TextView
                android:id="@+id/defNanites1"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_nanites1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nanites2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textNanites2"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_nanites2" />

            <TextView
                android:id="@+id/defNanites2"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_nanites2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nanites3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textNanites3"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_nanites3" />

            <TextView
                android:id="@+id/defNanites3"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_nanites3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/illegal1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textIllegal1"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_illegal1" />

            <TextView
                android:id="@+id/defIllegal1"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_illegal1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonSection"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/backBTN" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>