<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/steampunkYellow">

    <LinearLayout
        android:id="@+id/buttonSelection"
        android:layout_width="408dp"
        android:layout_height="340dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/heavyAttackBTN"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:textSize="20sp"
            android:fontFamily="@font/trade_winds"
            android:textColor="@color/steampunkYellow"
            android:layout_marginBottom="2dp"
            android:backgroundTint="@color/steampunkBlueFade"
            android:textStyle=""
            android:layout_marginLeft="32sp"
            android:layout_marginRight="32sp"
            android:text="@string/heavyAttackBTN" />

        <Button
            android:id="@+id/lightAttackBTN"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:textSize="20sp"
            android:fontFamily="@font/trade_winds"
            android:textColor="@color/steampunkYellow"
            android:layout_marginBottom="2dp"
            android:backgroundTint="@color/steampunkBlueFade"
            android:layout_marginLeft="32sp"
            android:layout_marginRight="32sp"
            android:text="@string/lightAttackBTN" />

        <Button
            android:id="@+id/invBTN"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginBottom="2dp"
            android:textSize="20sp"
            android:fontFamily="@font/trade_winds"
            android:textColor="@color/steampunkYellow"
            android:backgroundTint="@color/steampunkBlueFade"
            android:layout_marginLeft="32sp"
            android:layout_marginRight="32sp"
            android:text="@string/invBTN" />

        <Button
            android:id="@+id/fleeBTN"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_marginBottom="2dp"
            android:backgroundTint="@color/steampunkBlueFade"
            android:textSize="20sp"
            android:fontFamily="@font/trade_winds"
            android:textColor="@color/steampunkYellow"
            android:layout_marginLeft="32sp"
            android:layout_marginRight="32sp"
            android:text="@string/fleeBTN" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialogueArea"
        android:layout_width="404dp"
        android:layout_height="275dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:orientation="vertical"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/buttonSelection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/statArea">

        <TextView
            android:id="@+id/dialogueText"
            android:layout_width="match_parent"
            android:textColor="@color/steampunkBlue"
            android:fontFamily="@font/trade_winds"
            android:layout_height="225dp"
            android:textSize="20sp"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/dialogueText" />

        <TextView
            android:id="@+id/dialogueContinue"
            android:layout_width="match_parent"
            android:textColor="@color/steampunkBlue"
            android:fontFamily="@font/trade_winds"
            android:layout_height="45sp"
            android:gravity="end"
            android:text="@string/dialogueContinue" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/statArea"
        android:layout_width="210dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4sp"
        android:orientation="vertical"
        android:paddingStart="10sp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toStartOf="@+id/enemyStatArea"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/healthText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/steampunkBlue"
            android:fontFamily="@font/trade_winds"
            android:text="@string/healthText" />

        <TextView
            android:id="@+id/armorText"
            android:layout_width="wrap_content"
            android:textColor="@color/steampunkBlue"
            android:fontFamily="@font/trade_winds"
            android:layout_height="wrap_content"
            android:text="@string/armorText" />

        <TextView
            android:id="@+id/gearText"
            android:layout_width="wrap_content"
            android:fontFamily="@font/trade_winds"
            android:layout_height="wrap_content"
            android:textColor="@color/steampunkBlue"
            android:text="@string/gearText" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/enemyStatArea"
        android:layout_width="190dp"
        android:layout_height="100dp"
        android:layout_marginStart="4sp"
        android:layout_marginEnd="8sp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingEnd="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/statArea"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/enemyHealthText"
            android:layout_width="wrap_content"
            android:fontFamily="@font/trade_winds"
            android:textColor="@color/steampunkBlue"
            android:layout_height="wrap_content"
            android:text="@string/enemyHealthText" />

        <TextView
            android:id="@+id/enemyArmorText"
            android:layout_width="wrap_content"
            android:fontFamily="@font/trade_winds"
            android:textColor="@color/steampunkBlue"
            android:layout_height="wrap_content"
            android:text="@string/enemyArmorText" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>